tests/fixtures/invalid/extern_unknown_fn.gcl
// error: the plugin block does not declare `missing`
import plugin "graphcal:demo" as demo {
    fn lerp<D: Dim>(a: D, b: D, t: Dimensionless) -> D;
}
node x: Dimensionless = demo.missing(1.0);
